<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/bottom_menu_home" />
    <item
        android:id="@+id/bottom_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/bottom_menu_search" />
    <item
        android:id="@+id/bottom_notification"
        android:icon="@drawable/ic_baseline_notifications_none_24"
        android:title="@string/bottom_menu_notification" />
    <item
        android:id="@+id/bottom_message"
        android:icon="@drawable/ic_baseline_mail_outline_24"
        android:title="@string/bottom_menu_message" />
    <item
        android:id="@+id/bottom_mine"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/bottom_menu_mine" />
</menu>